Gallery alignment / spacing fixes

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -68,7 +68,7 @@
   }
   
   .gallery {
-    padding: 40px 0 300px;
+    padding: 40px 0 2rem;
     position: relative;
     overflow: hidden;
   }
